commit by friday,exam.md